#VERSION 0.7.99#

*  added class Peak_View_Cache > all cache logic inside Peak_View_Render have been moved there. There is no change
                                 in how we use view cache but it lightweight Peak_View_Render 
                                 when we do not use cache functionnality

*  Peak_View_Render > added methods deleteCache()

*  View_Helper_Debug > added methods getControllerSource() and getScriptSource()

*  Peak_Controller_Action > remove deprecated method view()

*  Peak_Zreflection > added, fixed and tweaked some methods. 

*  Peak_Config > added method getVars()

*  Peak_View_Theme > moved method getFunctionsFile() to Peak_View. Fixed Peak_View_Render_Partials 
                     and Peak_View_Render_Layouts accordly.

*  Peak_View > rename properties $vars to $_vars, $theme to $_theme and $view_engine to $_engine. 
               'Layouts' is now the default rendering engine

*  Peak_Xml > fix issue with curl_get_content() method

*  Peak_Controller_Action > added method redirect() that point to Peak_Controller_Front method. 

*  Peak_Controller_Front > added method redirect() we can now redirect to an other controller and/or action 
                           inside application controllers.

*  Peak_Router > added method setRequest(), usefull for setting manually a routing request array

*  Peak_Controller_Action > deprecated method view()

*  Peak_Application > added method render(). this method point to front->controller->render(). This simplify the application
                      index so we can do $app->render(); after $app->run(); instead of $app->front->controller->render();

*  Peak_Controller_Front > added method postDispatch()

*  Peak_Controller become Peak_Controller_Action

*  Peak_Controller > removed zendAction() and isZendAction(). fixed handleAction() and 
                     listActions() accordly to that change

*  Peak_Application > property $controller replaced by $front that point to Peak_Controller_Front.