@@ -21,10 +21,10 @@ class Peak_View_Render_Json extends Peak_View_Render
     public function render($file,$path)
     {       
         //CONTROLLER FILE VIEW       
-        $this->_scripts_file = $file;
-        $this->_scripts_path = $path;
+        $this->scripts_file = $file;
+        $this->scripts_path = $path;
 
-        $viewvars = Peak_Registry::obj()->view->getVars();
+        $viewvars = Peak_Registry::o()->view->getVars();
         
         $json = json_encode($viewvars);
 
